tests/expected_invalid_foreign_yields.diag.out
<input>:6:33: error: foreign functions may not declare `fails`
    public foreign fn test() -> Int fails Error
                                    ^^^^^
